--- a/scheduler/src/index.css
+++ b/scheduler/src/index.css
@@ -3,3 +3,11 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+h1, h2, h3, h4, p {
+  color: #2f2f2f;
+}
+
+table tr th {
+  text-align: center;
+}
