--- a/scheduler/src/index.css
+++ b/scheduler/src/index.css
@@ -11,3 +11,16 @@ h1, h2, h3, h4, p {
 table tr th {
   text-align: center;
 }
+
+.btn-register {
+  margin-top: 20px;
+}
+
+.selector {
+  margin-top: 12px;
+  margin-bottom: 16px;
+}
+
+.cellControl {
+  min-height: 30px;
+}
